[gd_scene load_steps=14 format=2]

[ext_resource path="res://button_normal_style.tres" type="StyleBox" id=1]
[ext_resource path="res://button_hover_style.tres" type="StyleBox" id=2]
[ext_resource path="res://Sprites/fondoBlanco.png" type="Texture" id=3]
[ext_resource path="res://guia_escenas/precipitaciones_1.gd" type="Script" id=4]
[ext_resource path="res://fonts/JAi_____.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/ciclohidrico.png" type="Texture" id=6]
[ext_resource path="res://select_cicloparte_buttonhover.tres" type="StyleBox" id=8]

[sub_resource type="Theme" id=1]
Button/styles/hover = ExtResource( 2 )
Button/styles/normal = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Node2D" type="Node"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -192.0
margin_top = -46.0
margin_right = 1208.0
margin_bottom = 654.0
texture = ExtResource( 3 )

[node name="ContinuarButton" type="Button" parent="."]
margin_left = 878.0
margin_top = 547.0
margin_right = 998.0
margin_bottom = 565.0
theme = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Continuar"

[node name="volverButton" type="Button" parent="."]
margin_left = 22.0
margin_top = 550.0
margin_right = 142.0
margin_bottom = 568.0
theme = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Volver"

[node name="textoPrecipitaciones" type="RichTextLabel" parent="."]
margin_right = 1024.0
margin_bottom = 130.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "El ciclo del agua, también conocido como ciclo hidrológico, es el proceso de transformación y circulación del agua en la Tierra.

El ciclo del agua consiste en el traslado del agua de un lugar a otro y sus cambios de estado físico, líquido, gaseoso y sólido, según las condiciones ambientales."

[node name="textoPrecipitaciones2" type="RichTextLabel" parent="."]
margin_left = 225.0
margin_top = 518.0
margin_right = 819.0
margin_bottom = 547.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Haz clic en cada una de las etapas para conocer mas"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 525, 314 )
scale = Vector2( 1.35, 1.13427 )
texture = ExtResource( 6 )

[node name="evaporacion_button" type="Button" parent="Sprite"]
margin_left = 59.2593
margin_top = 17.6324
margin_right = 239.259
margin_bottom = 103.632
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="condensacion_button2" type="Button" parent="Sprite"]
margin_left = 21.0
margin_top = -99.0
margin_right = 231.0
margin_bottom = 9.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="escorrentia_button3" type="Button" parent="Sprite"]
margin_left = -56.0
margin_top = 37.0
margin_right = 73.0
margin_bottom = 149.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="infiltracion_button4" type="Button" parent="Sprite"]
margin_left = -239.0
margin_top = 10.0
margin_right = -64.0
margin_bottom = 133.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="precipitacion_button5" type="Button" parent="Sprite"]
margin_left = -219.0
margin_top = -136.0
margin_right = 16.0
margin_bottom = -7.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[connection signal="pressed" from="ContinuarButton" to="." method="_on_ContinuarButton_pressed"]
[connection signal="pressed" from="volverButton" to="." method="_on_volverButton_pressed"]
[connection signal="pressed" from="Sprite/evaporacion_button" to="." method="_on_evaporacion_button_pressed"]
[connection signal="pressed" from="Sprite/condensacion_button2" to="." method="_on_condensacion_button2_pressed"]
[connection signal="pressed" from="Sprite/escorrentia_button3" to="." method="_on_escorrentia_button3_pressed"]
[connection signal="pressed" from="Sprite/infiltracion_button4" to="." method="_on_infiltracion_button4_pressed"]
[connection signal="pressed" from="Sprite/precipitacion_button5" to="." method="_on_precipitacion_button5_pressed"]
